--- a/gb/24/12/22/n14395823.md
+++ b/gb/24/12/22/n14395823.md
@@ -8,57 +8,62 @@
 <h6>江西省当局将李宜雪强制送进精神病院摧残之后，近日鉴定其精神状况后再次将其“送诊”。（视频截图）
 </h6>
 <hr>
-	<p>【大纪元2024年12月23日讯】（大纪元记者李净报导）江西省南昌市当局12月22日发布通报，当局不仅透露了李宜雪的失联情况，还提到她再次被认定为“神经病”患者并将其“送诊”。而李宜雪再次被警方“送诊”前曾发布多个视频，披露了当局是如何利用精神病院来迫害合法公民的诸多黑幕。</p>
+	<p>【大纪元2024年12月23日讯】（大纪元记者李净报导）江西省南昌市当局12月22日发通报透露了李宜雪的失联情况，还提到她再次被认定为“神经病”患者并将其“送诊”。而李宜雪这次被警方关精神病院前曾发布多个视频，揭露了当局是如何利用精神病院来迫害合法公民的诸多黑幕。</p>
 <p>近日，李宜雪突然失联，大陆网民全网寻人。面对舆论压力，江西省南昌市公安局西湖分局等两部门周日（22日）发布通报，终于承认了李宜雪失联的情况。</p>
 <p>在这份通报中，警方声称当局对李宜雪采取强制措施，是因为某网民报警称李宜雪在网络直播时侮辱其本人和家人，而李宜雪拒绝警方的传唤；并称是李宜雪主动要求聘请北京权威机构对其精神状况进行司法鉴定的。</p>
 <p>警方援引北京安定医院作出的鉴定意见，称“被鉴定人李宜雪诊断为强迫性障碍、人格障碍，实施违法行为时辨认、控制能力完整，评定为完全责任能力。鉴于李宜雪当前病情状况，12月22日街道社区将其送诊。”</p>
-<p>不过，南昌市警方并未提及李宜雪之前遭当地警员猥亵后又被警方强制送进精神病院的情况。</p>
+<p>不过，南昌市警方并未提及李宜雪之前遭当地警员猥亵后又被警方强制送进精神病院的情况，以及当局再次将李宜雪送诊是否获得其家属授权。</p>
 <figure id="attachment_14395846" aria-describedby="caption-attachment-14395846" style="width: 350px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/12/id14395846-c5036a3db205fab5a4946231f4bcc127-e1734914769846.jpg"><img decoding="async" class="size-full wp-image-14395846" src="https://i.epochtimes.com/assets/uploads/2024/12/id14395846-c5036a3db205fab5a4946231f4bcc127-e1734914769846.jpg" alt="" width="350" b="311" /></a><figcaption id="caption-attachment-14395846" class="wp-caption-text">（网页截图）</figcaption></figure>
 <p>对于当局针对李宜雪的精神状态鉴定，有网民解读说：“李宜雪精神鉴定不是正常人，但实施违法行为时是正常人。”还有网民讽刺道：“按照他们的鉴定：举报辅警猥亵时不是正常人，所以说的是假的。但是诽谤警方上门控制她时，她又是正常人了。”</p>
 <p>根据陆媒此前报导，2022年4月22日，李宜雪被南昌市公安局西湖分局丁公路派出所以“肇事肇祸”为由，强制送入江西省精神病院。出院后，李宜雪以医疗损害责任纠纷为由起诉江西省精神病医院，并开始在网上曝光自己遭“丁公路派出所辅警猥亵”一事，引发全网关注。2022年12月6日，该案一审开庭，但尚未宣判。</p>
 <p>大纪元记者注意到，一审之后，李宜雪在微博、抖音等大陆社交平台账号上持续发布视频，曝光当局以各种手段对其残酷迫害，包括之前她在派出所遭到警员猥亵，以及她被警方强行送到江西省精神病院遭受非人虐待长达近两个月，出院后她在居所又继续遭到当地黑社会人员的袭击和不明人员的骚扰。</p>
-<p><center><a title="江西女子李宜雪举报当地派出所辅警于2022年猥亵她之后，被当地警方送至江西省精神病院强制入院56天。李宜雪出院后控告院方等责任人，并持续在网上发视频讲述遭迫害经历。（视频1）｜#中国新闻 新唐人大纪元联合频道" src=""></a><a href="https://d2aqxvnyguf0uq.cloudfront.net/T4tSni7Xg"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-CN/embed/1h9s9o0eg1ihiIXo9IsiIH8TZ16p1c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>李宜雪的社交平台账号于12月11日停更。当天她在视频中表示，“我跟江西省精神病院的官司，从立案到庭审会议到一审的两次开庭，全部都是我一个人独立完成，不接受（官方）任何形式的帮助”。</p>
-<p><center><a title="江西女子李宜雪举报当地派出所辅警于2022年猥亵她之后，被当地警方送至江西省精神病院强制入院56天。李宜雪出院后控告院方等责任人，并持续在网上发视频讲述遭迫害经历。（视频2） ｜#中国新闻 新唐人大纪元联合频道" src=""></a><a href="https://d2aqxvnyguf0uq.cloudfront.net/T4tSni7Xg"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-CN/embed/1h9sfit6fuqHw6IZp9FDNgU0R1vf1c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>她提到，“对面（或指“江西省精神病院”）找了北京的律师，我不管你找了多少个律师，有一个算一个，打（官司）你们医院我一个人就够了。我要告诉你们的是什么呢？论法律你没有我懂，论辩论你辩不过我，结果你（当局）要来强制医疗我，你这不是滑天下之大稽吗？”</p>
-<p><center><a title="江西女子李宜雪举报当地派出所辅警于2022年猥亵她之后，被当地警方送至江西省精神病院强制入院56天。李宜雪出院后控告院方等责任人，并持续在网上发视频讲述遭迫害经历。（视频3）｜#中国新闻 新唐人大纪元联合频道" src=""></a><a href="https://d2aqxvnyguf0uq.cloudfront.net/T4tSni7Xg"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-CN/embed/1h9sg67glnj5ler2Q4Atqk7Nj13n1c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>李宜雪事件被媒体报导后，引发舆论广泛关注。除了在大陆社交平台上有不少网民对其关注外，在海外社交平台上，也有不少网民为李宜雪遭中共迫害而发声。</p>
+<p><center><a title="江西女子李宜雪举报当地派出所辅警于2022年猥亵她之后，被当地警方送至江西省精神病院强制入院56天。李宜雪出院后控告院方等责任人，并持续在网上发视频讲述遭迫害经历。（视频1）｜#中国新闻 新唐人大纪元联合频道" loading="lazy" data2-src=""></a><a href="https://d3caox32lipp7h.cloudfront.net/Z3cSni7Xv"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-CN/embed/1h9s9o0eg1ihiIXo9IsiIH8TZ16p1c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>李宜雪的社交平台账号于12月11日停更。当天她在视频中表示，“我跟江西省精神病院的官司，从立案到庭审会议到一审的两次开庭，全部都是我一个人独立完成，不接受（官方）任何形式的帮助”。</p>
+<p><center><a title="江西女子李宜雪举报当地派出所辅警于2022年猥亵她之后，被当地警方送至江西省精神病院强制入院56天。李宜雪出院后控告院方等责任人，并持续在网上发视频讲述遭迫害经历。（视频2） ｜#中国新闻 新唐人大纪元联合频道" loading="lazy" data2-src=""></a><a href="https://d3caox32lipp7h.cloudfront.net/Z3cSni7Xv"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-CN/embed/1h9sfit6fuqHw6IZp9FDNgU0R1vf1c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>她提到，“对面（或指“江西省精神病院”）找了北京的律师，我不管你找了多少个律师，有一个算一个，打（官司）你们医院我一个人就够了。我要告诉你们的是什么呢？论法律你没有我懂，论辩论你辩不过我，结果你（当局）要来强制医疗我，你这不是滑天下之大稽吗？”</p>
+<p><center><a title="江西女子李宜雪举报当地派出所辅警于2022年猥亵她之后，被当地警方送至江西省精神病院强制入院56天。李宜雪出院后控告院方等责任人，并持续在网上发视频讲述遭迫害经历。（视频3）｜#中国新闻 新唐人大纪元联合频道" loading="lazy" data2-src=""></a><a href="https://d3caox32lipp7h.cloudfront.net/Z3cSni7Xv"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-CN/embed/1h9sg67glnj5ler2Q4Atqk7Nj13n1c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>李宜雪事件被媒体报导后，引发舆论广泛关注。除了在大陆社交平台上有不少网民对其关注外，在海外社交平台上，也有不少网民为李宜雪遭中共迫害而发声。</p>
 <p>曾遭到中共迫害的中国民主党联合总部副主席界立建，周日（22日）在X（推特）平台上表示，他们在洛杉矶中共领事馆前抗议中共绑架李宜雪，他认为李宜雪揭露了中共犯罪集团的罪行，今天美国各地的网友、热心市民都在声援李宜雪。</p>
 <p>在中共领事馆前的抗议活动现场，抗议人士用播放器播放着李宜雪此前在社交平台上发布的录音。抗议人士除了要求中共当局立即释放李宜雪外，还要求释放何方美、董瑶琼、吴亚楠等被中共以“精神病”为由迫害的所有受害者。<ahref="https://x.com/jielijian/status/1870709830949961826">界立建在X平台的原文</a>）</p>
-<p><center><a title="李宜雪在失联数天后，江西省南昌市警方于12月22日发布通报，称北京安定医院鉴定李宜雪“为强迫性障碍、人格障碍”，当局已将其“送诊”。（视频4） ｜#中国新闻 新唐人大纪元联合频道" src=""></a><a href="https://d2aqxvnyguf0uq.cloudfront.net/T4tSni7Xg"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-CN/embed/1h9sglcdhoq1OrJWzmwCS3d2V1q31c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>此外，内蒙古自治区政府法律顾问室原执行主任杜文也在X平台上表示，“多少年了，我们见证了各式各样的残酷打压：有人上访被关‘黑监狱’； 有人维权被定‘寻衅滋事’；甚至有人仅仅说了几句真话，就被以‘煽动颠覆国家政权罪’送进大牢！而今，‘被精神病’早已成了中共维稳机器里最阴暗、最恶毒，却也最常见的一种手段：只要你对体制有任何质疑或反抗，他们就给你贴个‘偏执症’的标签，关进医院，电击、灌药、捆绑，让你在痛苦与绝望中被剥夺言语权和人格尊严。”</p>
+<p><center><a title="李宜雪在失联数天后，江西省南昌市警方于12月22日发布通报，称北京安定医院鉴定李宜雪“为强迫性障碍、人格障碍”，当局已将其“送诊”。（视频4） ｜#中国新闻 新唐人大纪元联合频道" loading="lazy" data2-src=""></a><a href="https://d3caox32lipp7h.cloudfront.net/Z3cSni7Xv"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-CN/embed/1h9sglcdhoq1OrJWzmwCS3d2V1q31c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>此外，内蒙古自治区政府法律顾问室原执行主任杜文也在X平台上表示，“多少年了，我们见证了各式各样的残酷打压：有人上访被关‘黑监狱’； 有人维权被定‘寻衅滋事’；甚至有人仅仅说了几句真话，就被以‘煽动颠覆国家政权罪’送进大牢！而今，‘被精神病’早已成了中共维稳机器里最阴暗、最恶毒，却也最常见的一种手段：只要你对体制有任何质疑或反抗，他们就给你贴个‘偏执症’的标签，关进医院，电击、灌药、捆绑，让你在痛苦与绝望中被剥夺言语权和人格尊严。”</p>
 <p>杜文曾被中共冤判关押逾12年，他说“在监狱中，犯人们都知道，宁肯相信世上有鬼也不要相信共产党的那张嘴。”杜文认为，“关注李宜雪就是关注我们自己。李宜雪的遭遇，正是这个政权丑陋本质的最直接写照。”<ahref="https://x.com/duwen2023/status/1870866115552813154">杜文在X平台的原文</a>）</p>
 <p>值得一提的是，上述提到的北京安定医院曾遭到海外“追查迫害法轮功国际组织”的调查，调查报告指中国83%的精神病医院（包括北京安定医院）在中共的压力下参与对信仰团体法轮功学员的迫害。<ahref="https://www.zhuichaguoji.org/node/105">追查国际的调查报告</a>）</p>
-<p><center><a title="李宜雪在失联数天后，江西省南昌市警方于12月22日发布通报，称北京安定医院鉴定李宜雪“为强迫性障碍、人格障碍”，当局已将其“送诊”。（视频5） ｜#中国新闻 新唐人大纪元联合频道" src=""></a><a href="https://d2aqxvnyguf0uq.cloudfront.net/T4tSni7Xg"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-CN/embed/1h9shcrfgvp3Gve6XdFuqEw351v91c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>责任编辑：叶梓明#</p>
+<p><center><a title="李宜雪在失联数天后，江西省南昌市警方于12月22日发布通报，称北京安定医院鉴定李宜雪“为强迫性障碍、人格障碍”，当局已将其“送诊”。（视频5） ｜#中国新闻 新唐人大纪元联合频道" loading="lazy" data2-src=""></a><a href="https://d3caox32lipp7h.cloudfront.net/Z3cSni7Xv"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-CN/embed/1h9shcrfgvp3Gve6XdFuqEw351v91c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>责任编辑：叶梓明#</p>
 <h3>推荐阅读</h3>
 <h3><span style="color: #0000ff;">．<a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/22/2/17/n13584534.md#1" target="_blank" rel="noopener">徐州丰县“千元买来的”女子被关进精神病院</a><br />
 <span style="color: #0000ff;">．<a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/23/6/27/n14023702.md#1" target="_blank" rel="noopener">互指对方有病 西安夫妻先后将对方强送精神病院</a><br />
 <span style="color: #0000ff;">．<a style="color: #0000ff;" href="https://github.com/1992513/djy/blob/master/gb/18/10/24/n10805534.md#1" target="_blank" rel="noopener">山东网戒中心再曝黑幕 小孩惨叫声撕心裂肺</a><br />
 <span style="color: #0000ff;">．<a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/22/8/19/n13806163.md#1" target="_blank" rel="noopener">调查报告：精神病院成中共迫害异己场所</a> </span></span></span></span></h3>
-	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/6/28/n13769126.md#1">泼墨女孩翻版 南京女子被超期关押在精神病院</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/6/29/n14024727.md#1">中国疫苗受害家长入狱 两幼女被送精神病院</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/13/n14329628.md#1">进京维权受阻 安徽27岁女子被送精神病院</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/5/n14364966.md#1">重庆一法轮功学员失踪5年 据悉被关精神病院</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/10/7/28/n2978870.md#1" target="_blank">鲜为人知的马克思之八：魔性的马克思</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/16/n11262985.md#1" target="_blank">一份传单圆梦 罗马青年吁中国人脱离暴政</a></li><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/6/n11167928.md#1" target="_blank">林辉：寿则多辱 鲁迅之弟周作人凄惨中死去</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/4/11/n7544340.md#1" target="_blank">大陆律师在法庭上揭穿“天安门自焚”伪案</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391372.md#1">冬至祈福六宜三不宜  古人迎祥避灾殃的作法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/8/n12676763.md#1">【元曲大家】白朴绝意仕进 词曲慰平生</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/16/n14392283.md#1">【未解之谜】最匪夷所思的实验 发现时间的秘密</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390885.md#1">传统冬至节俗吃什么  每一品都是中华文明之光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/4/n14384433.md#1">中国的第五大发明 二十四节气知多少？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/20/n14395005.md#1">【新闻大家谈】TikTok最后一搏 美高院将定夺</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/22/n14395547.md#1">【军事情报局】阿萨德最后一天 竟然连兄弟也骗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/20/n14395116.md#1">【菁英论坛】大陆学生自杀事件频发 谁是凶手？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/19/n14394433.md#1">继鸡蛋和羊角面包后 Costco一款零食又被召回</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/20/n14394510.md#1">演唱会裤兜里装矿泉水 刀郎爆红原因引热议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/20/n14394811.md#1">大陆外卖和网约车业为何挤满失落的中产</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395504.md#1">周慧敏被路人搀扶过马路 画面惊险</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/22/n14395543.md#1">年度票房倒数前十 黄圣依新片成本过亿仅卖百元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/20/n14395087.md#1">韦唯隐居深山10年 自曝经历严重车祸折断脊柱</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/19/n14394427.md#1">婚变传闻爆不停 吴奇隆刘诗诗关联公司已注销</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/20/n14394760.md#1">专家：在花园里撒肉桂粉 好处多多</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391154.md#1">鱼油吃对才有效? 这些人或增心房颤动风险</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/19/n14394026.md#1">想要更健康！ 早餐选这些食物吃</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/19/n14394176.md#1">停电不用慌 太阳能炉可煮出热腾腾饭菜和饮用水</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390802.md#1">低盐无力低糖心慌 健康饮食要这样吃</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544980.md#1">【直播】川普签署“大而美法案”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545641.md#1">【马克时空】服务一甲子 F-5告别台湾天空</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545423.md#1">第27届台北电影奖完整名单 《大风之岛》摘首奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540707.md#1">夏日沙拉这样做 清爽又健康 色彩缤纷又开胃</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/12/22/n14395823.htm">被关精神病院前 李宜雪发多个视频曝中共黑幕</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/12/22/n14395823.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
